# dotfiles

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  dotdrop.sh  provision.sh  pyproject.toml  version.sh
dotfiles/: aliases  ansible.cfg  gitconfig  gitignore  p10k.zsh  tmux.conf  vimrc  zprofile  zshrc
dotfiles/common/: aliases
dotfiles/config/alacritty/: alacritty.yml
dotfiles/config/aliases/: arch.sh  general.sh  mac.sh  main.sh  wsl.sh
dotfiles/config/kitty/themes/: custom.conf
dotfiles/config/lvim/: config.lua
dotfiles/config/nvim/: init.vim
dotfiles/git/: gitconfig.ini  gitignore
dotfiles/tmux/: tmux.conf
dotfiles/vim/templates/python/: main.py
dotfiles/zsh/: p10k.zsh  zprofile  zshrc
