[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["joshuakraitberg <joshua.kraitberg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dotdrop = "^1.7.3"
python-magic = "^0.4.24"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
